fix the layout issue. :pear: xiaochong

--- a/jobly/assets/less/style.less
+++ b/jobly/assets/less/style.less
@@ -37,7 +37,7 @@ body {
 }
 
 .form-container {
-	padding: 0 40px;
+	padding: 0 15px;
 }
 
 #post-job {
